footcapingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: footcap
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - host: aws.asghost.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: footcap
            port:
              number: 80
